# server/routes/employee.js
@@ -29,6 +29,50 @@ app.get("/:empId", async (req, res) => {
 });
 
 // Task API routes [post: create, get: read, put: update, delete: delete]
+/**
+ * @swagger
+ * /:empId/tasks:
+ *   post:
+ *     summary: Create a new task for an employee.
+ *     tags:
+ *       - Tasks
+ *     parameters:
+ *       - in: path
+ *         name: empId
+ *         description: Employee ID
+ *         required: true
+ *         schema:
+ *           type: number
+ *       - in: body
+ *         name: task
+ *         description: The task object to create.
+ *         required: true
+ *         schema:
+ *           type: object
+ *           properties:
+ *             description:
+ *               type: string
+ *             title:
+ *               type: string
+ *             content:
+ *               type: string
+ *             done:
+ *               type: boolean
+ *     responses:
+ *       200:
+ *         description: Successfully created a new task.
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '#/components/schemas/Task'
+ *       400:
+ *         description: Bad request. Invalid input or missing parameters.
+ *       404:
+ *         description: Employee not found for empId.
+ *       500:
+ *         description: Internal server error.
+ *
+ */
 
 app.post("/:empId/tasks", async (req, res, next) => {
   const { task } = req.body;
@@ -36,14 +80,125 @@ app.post("/:empId/tasks", async (req, res, next) => {
   res.json(newTask);
 });
 
+/**
+ * @swagger
+ * /:empId/tasks:
+ *   get:
+ *     summary: Get tasks for a specific employee.
+ *     tags:
+ *       - Tasks
+ *     parameters:
+ *       - in: path
+ *         name: empId
+ *         description: Employee ID
+ *         required: true
+ *         schema:
+ *           type: number
+ *     responses:
+ *       200:
+ *         description: Successfully retrieved tasks for the employee.
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: array
+ *               items:
+ *                 $ref: '#/components/schemas/Task'
+ *       400:
+ *         description: Bad request. Invalid input or missing parameters.
+ *       404:
+ *         description: No tasks found for the employee.
+ *       500:
+ *         description: Internal server error.
+ */
+
 app.get("/:empId/tasks", async (req, res, next) => {
   res.json(await Task.find({ empId: req.params.empId }));
 });
+
+/**
+ * @swagger
+ * /:empId/tasks/{id}:
+ *   delete:
+ *     summary: Delete a task by ID for a specific employee.
+ *     tags:
+ *       - Tasks
+ *     parameters:
+ *       - in: path
+ *         name: empId
+ *         description: Employee ID
+ *         required: true
+ *         schema:
+ *           type: number
+ *       - in: path
+ *         name: id
+ *         description: Task ID
+ *         required: true
+ *         schema:
+ *           type: string
+ *     responses:
+ *       200:
+ *         description: Successfully deleted the task.
+ *       400:
+ *         description: Bad request. Invalid input or missing parameters.
+ *       404:
+ *         description: Task not found.
+ *       500:
+ *         description: Internal server error.
+ */
 
 app.delete("/:empId/tasks/:id", async (req, res, next) => {
   res.json(await Task.deleteOne({ _id: req.params.id }));
 });
 
+/**
+ * @swagger
+ * /:empId/tasks/{id}:
+ *   put:
+ *     summary: Update a task by ID for a specific employee.
+ *     tags:
+ *       - Tasks
+ *     parameters:
+ *       - in: path
+ *         name: empId
+ *         description: Employee ID
+ *         required: true
+ *         schema:
+ *           type: number
+ *       - in: path
+ *         name: id
+ *         description: Task ID
+ *         required: true
+ *         schema:
+ *           type: string
+ *       - in: body
+ *         name: task
+ *         description: The updated task object.
+ *         required: true
+ *         schema:
+ *           type: object
+ *           properties:
+ *             description:
+ *               type: string
+ *             title:
+ *               type: string
+ *             content:
+ *               type: string
+ *             done:
+ *               type: boolean
+ *     responses:
+ *       200:
+ *         description: Successfully updated the task.
+ *         content:
+ *           application/json:
+ *             schema:
+ *               $ref: '#/components/schemas/Task'
+ *       400:
+ *         description: Bad request. Invalid input or missing parameters.
+ *       404:
+ *         description: Task not found.
+ *       500:
+ *         description: Internal server error.
+ */
 app.put("/:empId/tasks/:id", async (req, res, next) => {
   const { task } = req.body;
   res.json(await Task.updateOne({ _id: req.params.id }, task));
